	* Entries in the text replacement plugin are now sorted
	  alphabetically (Richard Laager)
	* The Evolution Integration plugin now supports Groupwise contacts
	* Mono plugin loader (Eoin Coffey)
	* Perl plugin loader has been rewritten (John Kelm)
	* New music messaging plugin (Christian Muise)
	* gaim-remote has been superceded by new DBUS bindings within Gaim
	  (Piotr Zielinski)

	MSN Features:
	* Custom smiley support (Irving Cordova & Francesco Fracassi)
	* Added support for sending (with the /nudge command) and receiving
	  "nudges" (Julien Cegarra, Martin Bayard)
	* Added an account action to open your Hotmail inbox from MSN

	Yahoo Features:
	* Stealth Settings have been implemented
	* Doodle is now supported (Andrew Dieffenbach)
	* Buddies' requests to add you to their lists now prompt for
	  authorization

	AIM/ICQ Features:
	* ICQ file transfer support with newer ICQ clients (Jonathan Clark)
	* Many overall improvements to OSCAR file transfers (Jonathan Clark)
	* Ability to set ICQ "require authorization" and "web aware"
	  setting (Ettore Simone)
	* ICQ encoding fix for offline buddies (Ilya Konstantinov)

	IRC Features:
	* SSL support for IRC connections (Daniel Atallah)
	* Show an error message when temporarily unable to join an IRC
	  channel or change your nick (Richard Laager)

	Other Protocol Changes:
	* Jabber support for SRV lookups
	* Bonjour (Rendezvous) protocol support (Juanjo Molinero Horno)
	* Updated Gadu-Gadu protocol support (Bartosz Oler)
	* SIP/SIMPLE support (Thomas Butter)
	* Sametime protocol support

	Other Noteworthy Changes:
	* UPNP and NAT traversal support (Adam J. Warrington)
	* The modify account dialog now contains two tabs, which should display
	  better at lower resolutions (Sadrul Habib Chowdhury)
	* New "find buddy" results dialog (Alex Converse)
	* People using input methods can now use Enter again
	* GNOME users can open received files by clicking on "Open" in the
	  file transfer window